[tool.poetry]
name = "bilireq"
version = "0.2.3.post0"
description = ""
authors = ["SK-415 <2967923486@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.0"
qrcode = {extras = ["pil"], version = "^7.3.1"}
rsa = "^4.9"
grpcio = "^1.49.1"
protobuf = "^4.21.7"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.49.1"
mypy-protobuf = "^3.3.0"

[tool.poetry.extras]
qrcode = ["qrcode"]

[tool.pyright]
ignore = ["bilireq/grpc/protos"]

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
