[project]
authors = [
    {name = "SK-415", email = "2967923486@qq.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "httpx",
    "pycryptodome>=3.19.0",
    "grpcio>=1.56.2",
    "protobuf>=4.23.4",
]
name = "bilireq"
version = "0.2.11"
description = "又一个哔哩哔哩请求库"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
qrcode = ["qrcode[pil]"]
web_qrcode = ["qrcode[pil]","lxml"]

[project.urls]
repository = "https://github.com/SK-415/bilireq"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "grpcio-tools>=1.56.2",
    "mypy-protobuf>=3.4.0",
]

[tool.pdm.build]
includes = []

[tool.pyright]
ignore = ["bilireq/grpc/protos"]
